<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
	android:layout_width="fill_parent"
	android:layout_height="wrap_content"
	android:orientation="vertical"
	android:padding="4px">
	
    <LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content"
        android:orientation="horizontal">
	    <TextView android:id="@+id/usernameLabel"
		    android:layout_width="wrap_content"
			android:layout_height="50sp"
			android:textSize="20sp"
			android:layout_marginTop="4px"
			android:layout_marginBottom="4px"
			android:layout_marginLeft="4px"
			android:layout_marginRight="4px"
			android:text="@string/username"/>
		<EditText android:id="@+id/username"
		    android:layout_width="150sp"
			android:layout_height="50sp"
			android:singleLine="true"
			android:textSize="20sp"
			android:layout_marginTop="4px"
			android:layout_marginBottom="4px"
			android:layout_marginLeft="4px"
			android:layout_marginRight="4px"
			android:text="patricia@demandware.com"/>        
    </LinearLayout>
    <LinearLayout android:layout_width="fill_parent"
		android:layout_height="wrap_content"
        android:orientation="horizontal">
        <TextView android:id="@+id/passwordLabel"
		    android:layout_width="wrap_content"
			android:layout_height="50sp"
			android:textSize="20sp"
			android:layout_marginTop="4px"
			android:layout_marginBottom="4px"
			android:layout_marginLeft="4px"
			android:layout_marginRight="4px"
			android:text="@string/password"/>
		<EditText android:id="@+id/password"
		    android:layout_width="160sp"
			android:layout_height="50sp"
			android:singleLine="true"
			android:textSize="20sp"
			android:inputType="textPassword"
			android:layout_marginTop="4px"
			android:layout_marginBottom="4px"
			android:layout_marginLeft="4px"
			android:layout_marginRight="4px"
			android:text="demandware1"/>
	</LinearLayout>
	<Button android:id="@+id/loginButton"
	    android:layout_width="fill_parent"
		android:layout_height="50sp"
		android:textSize="20sp"
		android:layout_marginTop="4px"
		android:layout_marginBottom="4px"
		android:layout_marginLeft="4px"
		android:layout_marginRight="4px"
		android:text="@string/loginButtonText"/>
</LinearLayout>